/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Interface.java to edit this template
 */
package loja;

/**
 *
 * @author luizh
 */
public interface Pessoa {
    public String getCpf();
    public String getNome();
    public void setCpf(String cpf);
    public void setNome(String nome);
}
